# UltraCold

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: UltraColdConfig.cmake
docs/: Doxyfile
docs/html/: _bogolyubov_solvers_8hpp_source.html  _colors_8hpp_source.html  _d_ft_calculator_8hpp_source.html  _data_out_8hpp_source.html  _g_p_solvers_8hpp_source.html  _input_parser_8hpp_source.html  _ultra_cold_8hpp_source.html  _vector_8hpp_source.html  annotated.html  annotated_dup.js  class_dipoles2d-members.html  class_dipoles2d.html  class_dipoles2d.js  class_ultra_cold_1_1_fourier_space_output_1_1_data_out.html  class_ultra_cold_1_1_g_p_solvers_1_1_dipolar_g_p_solver-members.html  class_ultra_cold_1_1_g_p_solvers_1_1_dipolar_g_p_solver.html  class_ultra_cold_1_1_g_p_solvers_1_1_dipolar_g_p_solver.js  class_ultra_cold_1_1_g_p_solvers_1_1_g_p_solver-members.html  class_ultra_cold_1_1_g_p_solvers_1_1_g_p_solver.html  class_ultra_cold_1_1_g_p_solvers_1_1_g_p_solver.js  class_ultra_cold_1_1_m_k_l_wrappers_1_1_d_ft_calculator.html  class_ultra_cold_1_1_real_space_output_1_1_data_out.html  class_ultra_cold_1_1_tools_1_1_color-members.html  class_ultra_cold_1_1_tools_1_1_color.html  class_ultra_cold_1_1_tools_1_1_color.js  class_ultra_cold_1_1_vector.html  class_ultra_cold_1_1cuda_solvers_1_1_dipolar_g_p_solver-members.html  class_ultra_cold_1_1cuda_solvers_1_1_dipolar_g_p_solver.html  class_ultra_cold_1_1cuda_solvers_1_1_dipolar_g_p_solver.js  class_ultra_cold_1_1cuda_solvers_1_1_g_p_solver-members.html  class_ultra_cold_1_1cuda_solvers_1_1_g_p_solver.html  class_ultra_cold_1_1cuda_solvers_1_1_g_p_solver.js  classes.html  classmy_g_p_solver-members.html  classmy_g_p_solver.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_fbbeca4c92d43bc59d2be4f27e24aaa5.html  example-1.html  example-2.html  (+23 more)
docs/pages/: example-1.dox  example-2.dox  example-3.dox  example-4.dox  (+2 more)
examples/: README.md
source/: UltraCold.hpp
source/cuda/: CMakeLists.txt  cudaDeviceVector.cu  cudaDeviceVector.cuh  cudaDipolarGPSolver.cu  cudaDipolarGPSolver.cuh  cudaGPSolver.cu  cudaGPSolver.cuh  kernel_utilities.cu  kernel_utilities.cuh
(+41 files in other folders)
